--- a/sass/components/_carousel.scss
+++ b/sass/components/_carousel.scss
@@ -19,8 +19,8 @@
     }
 
     &--animated{
-        flex-wrap:nowrap;
-        animation: carousel-spin 10s linear infinite;
+        //flex-wrap:nowrap;
+        //animation: carousel-spin 10s linear infinite;
     }
 
     &-animation-wrapper{
@@ -37,7 +37,7 @@
 
     &__slide{
         display: inline-block;
-        //animation:18s spin linear infinite;
+        animation:8s spin linear infinite;
     }
 
     &__image{
@@ -53,19 +53,19 @@
         .logos__slide{
             display:inline-table;
             border-collapse:separate;
-            border-spacing: 2.5rem;
+            border-spacing: 2.5rem; 
 
-            @include respond('tab-land'){
-                display: block;
+            &:last-child{
+                margin-left:-1.25rem;
             }
-            
+
             &>*{
                 display: table-cell;
-
                 @include respond('tab-land'){
-                    display:inline-block;
-                    margin-right:2.5rem;
+                    //display:inline-block;
+                    //margin-right:2.5rem;
                     min-height: 35rem;
+                    min-width: 20rem;
                     vertical-align: top;
                 }
                 @include respond('phone'){
