--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -7,10 +7,10 @@
     
     @include respond('tab-land'){
         max-width: none;
-        width: calc(1/4*90%);
+        //width: calc(1/4*90%);
     }
     @include respond('phone'){
-        width: calc(1/2*85%);
+        //width: calc(1/2*85%);
         padding:2rem;
     }
 
