--- a/css/style.css
+++ b/css/style.css
@@ -239,11 +239,23 @@ footer.footer {
   font-family: 'helvetica';
   font-size: 2.2rem;
   font-weight: 400; }
+  @media only screen and (max-width: 56.25em) {
+    .text-testimonial .text-title {
+      font-size: 1.8rem; } }
 
 .text-testimonial .text-client {
   font-size: 6.1rem;
   letter-spacing: 4px;
   padding-bottom: 1rem; }
+  @media only screen and (max-width: 90em) {
+    .text-testimonial .text-client {
+      font-size: 5rem; } }
+  @media only screen and (max-width: 64em) {
+    .text-testimonial .text-client {
+      font-size: 4.5rem; } }
+  @media only screen and (max-width: 56.25em) {
+    .text-testimonial .text-client {
+      font-size: 4rem; } }
 
 .text-testimonial .text-description {
   font-family: 'helvetica';
@@ -252,6 +264,9 @@ footer.footer {
   font-size: 1.8rem;
   padding-bottom: 2rem;
   line-height: 148%; }
+  @media only screen and (max-width: 64em) {
+    .text-testimonial .text-description {
+      font-size: 1.6rem; } }
 
 .u-center-text {
   text-align: center !important; }
@@ -266,7 +281,7 @@ footer.footer {
   display: block !important; }
 
 .u-section-title {
-  padding: 5rem !important; }
+  padding: 4rem !important; }
 
 .u-left-padding-zero {
   padding-left: 0 !important; }
@@ -336,6 +351,10 @@ footer.footer {
 
 .u-margin-top-mid {
   margin-top: 10rem !important; }
+
+@media only screen and (max-width: 37.5em) {
+  .u-margin-top-mid-phone {
+    margin-top: 3rem !important; } }
 
 .u-margin-top-lg {
   margin-top: 18rem !important; }
@@ -1185,12 +1204,24 @@ footer.footer {
   background-color: #00A979;
   padding-top: 5rem;
   padding-bottom: 5rem; }
+  @media only screen and (max-width: 48em) {
+    .testimonials .header {
+      padding-top: 1rem; } }
 
 .testimonials .section-testimonials {
   position: relative;
   padding: 20rem;
   background-color: #FFF7E1;
   overflow: hidden; }
+  @media only screen and (max-width: 56.25em) {
+    .testimonials .section-testimonials {
+      padding: 20rem 10rem 20rem 10rem; } }
+  @media only screen and (max-width: 56.25em) {
+    .testimonials .section-testimonials {
+      padding: 15rem 5rem 15rem 5rem; } }
+  @media only screen and (max-width: 29em) {
+    .testimonials .section-testimonials {
+      padding: 11rem 1rem 11rem 1rem; } }
   .testimonials .section-testimonials__img {
     position: absolute;
     width: 30%; }
@@ -1210,6 +1241,9 @@ footer.footer {
 
 .testimonials .section-form {
   padding-top: 10rem; }
+  @media only screen and (max-width: 37.5em) {
+    .testimonials .section-form {
+      padding-top: 5rem; } }
   .testimonials .section-form__background-top-wave {
     width: 100%;
     max-height: 20rem;
@@ -1382,6 +1416,9 @@ footer.footer {
     transition: background-color .2s; }
     .button--testimonial:hover {
       background-color: #2f2c96; }
+    @media only screen and (max-width: 56.25em) {
+      .button--testimonial {
+        font-size: 1.8rem; } }
   @media only screen and (max-width: 75em) {
     .button {
       padding: 0.9rem 1.7rem 0.6rem 1.7rem; } }
@@ -2015,6 +2052,9 @@ footer.footer {
     .page-notch {
       max-width: fit-content;
       min-width: 35%; } }
+  @media only screen and (max-width: 37.5em) {
+    .page-notch {
+      min-width: 53%; } }
   .page-notch__content {
     color: #232427;
     display: inline-block; }
@@ -2039,6 +2079,9 @@ footer.footer {
       .page-notch__heading {
         font-size: 3.2rem;
         letter-spacing: 5px; } }
+    @media only screen and (max-width: 37.5em) {
+      .page-notch__heading {
+        letter-spacing: 4px; } }
   .page-notch__sub-heading {
     display: inline-block;
     text-align: center;
