--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -39,6 +39,10 @@
         &:hover{
             background-color: $color-purple;
         }
+
+        @include respond('tab-port'){
+            font-size:$text-small-med-med-med;
+        }
     }
 
     @include respond('tab-land'){
