--- a/sass/components/_page-notch.scss
+++ b/sass/components/_page-notch.scss
@@ -15,6 +15,9 @@
         max-width:fit-content;
         min-width: 35%;
     }
+    @include respond('phone'){
+        min-width: 53%;
+    }
     
     &__content{
         color:$color-black;
@@ -43,6 +46,9 @@
         @include respond('phone-med'){
             font-size:$text-large;
             letter-spacing: 5px;
+        }
+        @include respond('phone'){
+            letter-spacing: 4px;
         }
     }
     &__sub-heading{
