--- a/sass/components/_study-content.scss
+++ b/sass/components/_study-content.scss
@@ -2,20 +2,39 @@
     display:flex;   
     flex-direction: row;  
 
-    &__side{
-        min-width: 15%;
+    @include respond('phone'){
         flex-direction: column;
     }
+
+    &__side{
+        min-width: 15%;
+        @include respond('phone'){
+            display:flex;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+    }
+    
     &__side &__item{
         &:not(:last-child){
             padding-bottom:6rem;
         }
+        @include respond('phone'){
+            flex-basis: calc(1/3*97%);
+        }
+
     }
 
     &__main{
         flex-grow:1;
         flex-direction: column;
         margin-left:20rem;
+        @include respond('tab-port'){
+            margin-left:10rem;
+        }
+        @include respond('phone'){
+            margin-left: 0;
+        }
     }
     &__main &__item{
         &:not(:last-child){
