--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -39,8 +39,9 @@
         height: 48rem;
         background-position:center;
         background-repeat:no-repeat;
-        background-size: 35rem;
         transition: transform .3s, filter .2s;
+        background-size:125%;
+
 
         @include respond('big-laptop'){
             width:17rem;
@@ -50,6 +51,9 @@
             width:20rem;
             height: 52rem;
         }
+        @include respond('tab-generic'){
+            background-size: 130%;
+        }
         @include respond('phone'){
             width:16rem;
             height: 44rem;
@@ -57,6 +61,7 @@
         @include respond('phone-med'){
             width: 15rem;
             height: 42rem;
+            background-size: 135%;
         }
 
         &:hover{
@@ -68,10 +73,10 @@
         &--1{
             left:1rem;
             background-image: linear-gradient(to top, $color-purple-transparent 100%, transparent),
-            linear-gradient(to top, $color-black-transparent 60%, transparent), url("../img/covers/pp.png");
+            linear-gradient(to top, $color-black-transparent 60%, transparent), url("../img/hero/kreek.png");
 
             &:hover{
-                background-image: url("../img/covers/pp.png");
+                background-image: url("../img/hero/kreek.png");
                 @include respond('tab-land'){
                     transform:translate(-130%,-50%) scale(1.1);
                 }
@@ -89,10 +94,10 @@
         &--2{
             left:17rem;
             background-image: linear-gradient(to top, $color-purple-transparent 100%, transparent),
-            linear-gradient(to top, $color-black-transparent 60%, transparent), url("../img/covers/pp.png");
+            linear-gradient(to top, $color-black-transparent 60%, transparent), url("../img/hero/pp-2.png");
 
             &:hover{
-                background-image: url("../img/covers/pp.png");
+                background-image: url("../img/hero/pp-2.png");
                 @include respond('tab-land'){
                     transform:translate(-50%,-50%) scale(1.1);
                 }
@@ -106,10 +111,10 @@
         &--3{
             left:33rem;
             background-image: linear-gradient(to top, $color-purple-transparent 100%, transparent),
-            linear-gradient(to top, $color-black-transparent 60%, transparent), url("../img/covers/pp.png");
+            linear-gradient(to top, $color-black-transparent 60%, transparent), url("../img/hero/ian.png");
 
             &:hover{
-                background-image: url("../img/covers/pp.png");
+                background-image: url("../img/hero/ian.png");
                 @include respond('tab-land'){
                     transform:translate(30%,-50%) scale(1.1);
                 }
