--- a/css/style.css
+++ b/css/style.css
@@ -2471,12 +2471,21 @@ footer.footer {
   background-position: bottom;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-bottom: 13rem; }
+  padding-bottom: 13rem;
+  height: 70rem; }
+  @media only screen and (max-width: 90em) {
+    .case-study {
+      height: 75rem; } }
+  @media only screen and (max-width: 75em) {
+    .case-study {
+      height: 82rem; } }
   @media only screen and (max-width: 56.25em) {
     .case-study {
+      height: 57rem;
       padding-bottom: 8rem; } }
   @media only screen and (max-width: 37.5em) {
     .case-study {
+      height: 41rem;
       padding-bottom: 6rem; } }
   .case-study__cover {
     height: 65vh;
@@ -2484,7 +2493,8 @@ footer.footer {
     background-repeat: no-repeat;
     background-size: cover;
     transition: background-position .5s;
-    background-position: center; }
+    background-position: center;
+    backface-visibility: hidden; }
     @media only screen and (max-width: 56.25em) {
       .case-study__cover {
         height: 39vh; } }
@@ -2517,9 +2527,13 @@ footer.footer {
       background: linear-gradient(to bottom, rgba(0, 0, 0, 0.219), rgba(0, 0, 0, 0.219));
       cursor: pointer; }
   .case-study__triangle {
+    transition: transform .1s;
     transform: translateY(-70%);
     text-align: center;
-    margin-bottom: -4%; }
+    margin-bottom: -4%;
+    backface-visibility: hidden; }
+    .case-study__triangle:hover {
+      cursor: pointer; }
     @media only screen and (max-width: 56.25em) {
       .case-study__triangle {
         margin-bottom: -10%; } }
@@ -2530,9 +2544,11 @@ footer.footer {
     @media only screen and (max-width: 29em) {
       .case-study__triangle {
         margin-bottom: -9%; } }
-  @media only screen and (max-width: 37.5em) {
-    .case-study__triangle-image {
-      height: 7rem; } }
+  .case-study__triangle-image {
+    transition: transform .2s; }
+    @media only screen and (max-width: 37.5em) {
+      .case-study__triangle-image {
+        height: 7rem; } }
   .case-study__description {
     text-align: center; }
   .case-study__study-heading {
@@ -2545,3 +2561,55 @@ footer.footer {
       .case-study__study-heading {
         font-size: 2rem;
         letter-spacing: 2px; } }
+  .case-study__study-description {
+    max-width: 60%;
+    margin: 0 auto;
+    text-align: center;
+    padding-top: 4rem;
+    font-size: 2rem;
+    letter-spacing: 2px;
+    color: #FFF7E1; }
+    @media only screen and (max-width: 37.5em) {
+      .case-study__study-description {
+        font-size: 1.6rem;
+        max-width: 80%;
+        letter-spacing: 1.5px; } }
+  .case-study__cover, .case-study__description {
+    transition: height .4s; }
+  .case-study__cover {
+    transition: background-position .5s, height .4s; }
+  .case-study#case-study[data-show-description="hidden"] .case-study__triangle-image {
+    transform: rotate(0deg); }
+  .case-study#case-study[data-show-description="hidden"] .case-study__description {
+    height: auto; }
+  .case-study#case-study[data-show-description="hidden"] .case-study__arrow-container {
+    display: flex; }
+  .case-study#case-study[data-show-description="hidden"] .case-study__study-heading {
+    margin-top: 0rem; }
+  .case-study#case-study[data-show-description="hidden"] .case-study__study-description {
+    visibility: hidden;
+    display: none; }
+  .case-study#case-study[data-show-description="visible"] .case-study__triangle {
+    transform: translateY(0);
+    margin-bottom: 0%; }
+    .case-study#case-study[data-show-description="visible"] .case-study__triangle-image {
+      transform: rotate(180deg); }
+    @media only screen and (max-width: 56.25em) {
+      .case-study#case-study[data-show-description="visible"] .case-study__triangle {
+        margin-bottom: 0%; } }
+    @media only screen and (max-width: 37.5em) {
+      .case-study#case-study[data-show-description="visible"] .case-study__triangle {
+        transform: translateY(0);
+        margin-bottom: 0%; } }
+    @media only screen and (max-width: 29em) {
+      .case-study#case-study[data-show-description="visible"] .case-study__triangle {
+        margin-bottom: 0%; } }
+  .case-study#case-study[data-show-description="visible"] .case-study__cover {
+    height: 0; }
+  .case-study#case-study[data-show-description="visible"] .case-study__arrow-container {
+    display: none; }
+  .case-study#case-study[data-show-description="visible"] .case-study__study-heading {
+    margin-top: 5rem; }
+  .case-study#case-study[data-show-description="visible"] .case-study__study-description {
+    display: block;
+    visibility: visible; }
