--- a/sass/components/_case-study.scss
+++ b/sass/components/_case-study.scss
@@ -4,10 +4,20 @@
     background-repeat: no-repeat;
     background-size:cover;
     padding-bottom:13rem;
+    height: 70rem;
+
+    @include respond('big-laptop'){
+        height: 75rem;
+    }
+    @include respond('tab-land'){
+        height: 82rem;
+    }
     @include respond('tab-port'){
+        height: 57rem;
         padding-bottom:8rem;
     }
     @include respond('phone'){
+        height: 41rem;
         padding-bottom:6rem;
     }
 
@@ -18,6 +28,7 @@
         background-size: cover;
         transition: background-position .5s;
         background-position: center;
+        backface-visibility: hidden;
 
         @include respond('tab-port'){
             height: 39vh;
@@ -35,20 +46,6 @@
         &[data-position="right"]{
             background-position: right;
         }
-
-        // &-image{
-        //     display:inline-block;
-        //     height: 100%;
-        //     &[data-position="center"]{
-        //         background-position: center;
-        //     }
-        //     &[data-position="left"]{
-        //         background-position: left;
-        //     }
-        //     &[data-position="right"]{
-        //         background-position: right;
-        //     }
-        // }
     }
 
     &__arrow{
@@ -84,9 +81,14 @@
     }
 
     &__triangle{
+        &:hover{
+            cursor:pointer;
+        }
+        transition: transform .1s;
         transform:translateY(-70%);
         text-align: center;
         margin-bottom:-4%;
+        backface-visibility: hidden;
         @include respond('tab-port'){
             margin-bottom:-10%;
         }
@@ -99,6 +101,7 @@
         }
     }
     &__triangle-image{
+        transition: transform .2s;
         @include respond('phone'){
             height: 7rem;
         }
@@ -116,5 +119,105 @@
             font-size: $text-small;
             letter-spacing: 2px;
         }
+    }
+    &__study-description{
+        max-width: 60%;
+        margin:0 auto;
+        text-align: center;
+        padding-top:4rem;
+        font-size:$text-small;
+        letter-spacing: 2px;
+        color:$color-light;
+        @include respond('phone'){
+            font-size:$text-small-med-med;
+            max-width: 80%;
+            letter-spacing: 1.5px;
+        }
+    }
+
+    &__cover,
+    &__description{
+        transition: height .4s;
+    }
+    &__cover{
+        transition: background-position .5s, height .4s;
+    }
+
+    &#case-study{
+        &[data-show-description="hidden"]{
+            .case-study{
+                &__triangle{
+                    &-image{
+                        transform:rotate(0deg);
+                    }
+                    //transform: rotate(0deg) translateY(-70%);
+                    @include respond('phone'){
+                        //transform: rotate(0deg) translateY(-60%);
+                    }
+                }
+                &__description{
+                    height: auto;
+                }
+                &__arrow-container{
+                    display:flex;
+                }
+                &__study-heading{
+                    margin-top:0rem;
+                }
+                &__study-description{
+                    visibility: hidden;
+                    display:none;
+                }
+            }
+        }
+
+        &[data-show-description="visible"]{
+            //on button click
+            .case-study{
+                &__triangle{
+                    &-image{
+                        transform:rotate(180deg);
+                    }
+                    transform: translateY(0);
+                    margin-bottom:0%;
+                    @include respond('tab-port'){
+                        margin-bottom:0%;
+                    }
+                    @include respond('phone'){
+                        transform: translateY(0);
+                        margin-bottom:0%;
+                    }
+                    @include respond('phone-med'){
+                        margin-bottom: 0%;
+                    }
+                }
+
+                &__cover{
+                    height: 0;
+                }
+
+                &__description{
+                    // height: 65vh;
+                    // @include respond('tab-port'){
+                    //     height: 39vh;
+                    // }
+                    // @include respond('phone'){
+                    //     height: 30vh;
+                    // }
+                }
+                &__arrow-container{
+                    display:none;
+                }
+
+                &__study-heading{
+                    margin-top:5rem;
+                }
+                &__study-description{
+                    display:block;
+                    visibility: visible;
+                }
+            }
+        }
+
     }
 }
