--- a/sass/pages/_testimonials.scss
+++ b/sass/pages/_testimonials.scss
@@ -40,6 +40,11 @@
                 width:40%;
             }
         }
+
+        &__main{
+            overflow:hidden; 
+            padding-top:4rem;
+        }
     }
 
     .section-clients {
